--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 export ALCHEMY_API_KEY=
+export ETHERSCAN_API_KEY=
 export POLYGONSCAN_API_KEY=
 
 # Private key for deployment and executing transaction in tasks
